# nn

./: .gitignore  AUTHORS  Makefile.am  ann.json  configure.ac
examples/: eg_ann.json
nn/: ann  io.c  nn.c  nn.h
nn/cJSON/: LICENSE_cJSON
nn/uthash/: LICENSE_uthash
src/: test.c  test.h  testnn.c
